--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,28 +6,41 @@
         <li><%= link_to t("navbar.home"), root_path %></li>
         <li><%= link_to t("navbar.courses"), user_courses_path %></li>
         <% if logged_in? %>
-          <% if is_user? %>
+          <% if current_user.admin? %>
+            <!-- Admin Navigation -->
+            <li><%= link_to t("navbar.manage_word"), admin_words_path %></li>
+          <% else %>
+            <!-- Normal User Navigation -->
+            <li><%= link_to t("navbar.home"), root_path %></li>
+            <li><%= link_to t("navbar.courses"), "#" %></li>
             <li><%= link_to t("navbar.words"), "#" %></li>
             <li><%= link_to t("navbar.profile"), "#" %></li>
-            <li class="dropdown">
-              <%= link_to "#", id: "account", class: "dropdown-toggle", "data-toggle": "dropdown" do %>
-                <%= t("navbar.account") %>
-                <b class="caret"></b>
-              <% end %>
-              <ul class="dropdown-menu" id="dropdown-menu">
-                <li><%= link_to t("navbar.profile"), "#" %></li>
-                <li><%= link_to t("navbar.settings"), "#" %></li>
-                <li class="divider"></li>
-                <li> <%= link_to t("navbar.log_out"), logout_path, data: {"turbo-method": :delete} %></li>
-              </ul>
-            </li>
           <% end %>
+
+          <!-- Account Dropdown (for logged in users) -->
+          <li class="dropdown">
+            <%= link_to "#", id: "account", class: "dropdown-toggle", "data-toggle": "dropdown" do %>
+              <%= t("navbar.account") %> <b class="caret"></b>
+            <% end %>
+            <ul class="dropdown-menu" id="dropdown-menu">
+              <li><%= link_to t("navbar.profile"), "#" %></li>
+              <li><%= link_to t("navbar.settings"), "#" %></li>
+              <li class="divider"></li>
+              <li><%= link_to t("navbar.log_out"), logout_path, data: {"turbo-method": :delete} %></li>
+            </ul>
+          </li>
+
         <% else %>
+          <!-- Guest Navigation -->
+          <li><%= link_to t("navbar.home"), root_path %></li>
+          <li><%= link_to t("navbar.help"), "#" %></li>
+          <li><%= link_to t("navbar.contact"), "#" %></li>
+          <li><%= link_to t("navbar.microposts"), "#" %></li>
           <li><%= link_to t("navbar.sign_up"), signup_path %></li>
           <li><%= link_to t("navbar.log_in"), login_path %></li>
         <% end %>
 
-        <!-- Language switch -->
+        <!-- Language Switch -->
         <li><%= link_to t("languages.en"), url_for(locale: :en) %></li>
         <li><%= link_to t("languages.vi"), url_for(locale: :vi) %></li>
       </ul>
