--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,24 +3,23 @@
     <%= link_to "sample app", "#", id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to t("navbar.home"), static_pages_home_path %></li>
-        <li><%= link_to t("navbar.help"), static_pages_help_path %></li>
-        <li><%= link_to t("navbar.contact"), static_pages_contact_path %></li>
-        <li><%= link_to t("navbar.microposts"), microposts_path %></li>
-        <% if logged_in? %>
-          <li><%= link_to t("navbar.account"), "#" %></li>
+        <li><%= link_to t("navbar.home"), "#" %></li>
+        <li><%= link_to t("navbar.courses"), "#" %></li>
+        <% if is_user? %>
+          <li><%= link_to t("navbar.words"), "#" %></li>
+          <li><%= link_to t("navbar.profile"), "#" %></li>
           <li class="dropdown">
             <%= link_to "#", id: "account", class: "dropdown-toggle", "data-toggle": "dropdown" do %>
               <%= t("navbar.account") %>
               <b class="caret"></b>
-          <% end %>
-          <ul class="dropdown-menu" id="dropdown-menu">
-            <li><%= link_to t("navbar.profile"), current_user %></li>
-            <li><%= link_to t("navbar.settings"), "#" %></li>
-            <li class="divider"></li>
-            <li> <%= link_to t("navbar.log_out"), logout_path, data: {"turbo-method": :delete} %></li>
-          </ul>
-        </li>
+            <% end %>
+            <ul class="dropdown-menu" id="dropdown-menu">
+              <li><%= link_to t("navbar.profile"), "#" %></li>
+              <li><%= link_to t("navbar.settings"), "#" %></li>
+              <li class="divider"></li>
+              <li> <%= link_to t("navbar.log_out"), logout_path, data: {"turbo-method": :delete} %></li>
+            </ul>
+          </li>
         <% else %>
           <li><%= link_to t("navbar.sign_up"), signup_path %></li>
           <li><%= link_to t("navbar.log_in"), login_path %></li>
