--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,21 +5,23 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to t("navbar.home"), "#" %></li>
         <li><%= link_to t("navbar.courses"), user_courses_path %></li>
-        <% if is_user? %>
-          <li><%= link_to t("navbar.words"), "#" %></li>
-          <li><%= link_to t("navbar.profile"), "#" %></li>
-          <li class="dropdown">
-            <%= link_to "#", id: "account", class: "dropdown-toggle", "data-toggle": "dropdown" do %>
-              <%= t("navbar.account") %>
-              <b class="caret"></b>
-            <% end %>
-            <ul class="dropdown-menu" id="dropdown-menu">
-              <li><%= link_to t("navbar.profile"), "#" %></li>
-              <li><%= link_to t("navbar.settings"), "#" %></li>
-              <li class="divider"></li>
-              <li> <%= link_to t("navbar.log_out"), logout_path, data: {"turbo-method": :delete} %></li>
-            </ul>
-          </li>
+        <% if logged_in? %>
+          <% if is_user? %>
+            <li><%= link_to t("navbar.words"), "#" %></li>
+            <li><%= link_to t("navbar.profile"), "#" %></li>
+            <li class="dropdown">
+              <%= link_to "#", id: "account", class: "dropdown-toggle", "data-toggle": "dropdown" do %>
+                <%= t("navbar.account") %>
+                <b class="caret"></b>
+              <% end %>
+              <ul class="dropdown-menu" id="dropdown-menu">
+                <li><%= link_to t("navbar.profile"), "#" %></li>
+                <li><%= link_to t("navbar.settings"), "#" %></li>
+                <li class="divider"></li>
+                <li> <%= link_to t("navbar.log_out"), logout_path, data: {"turbo-method": :delete} %></li>
+              </ul>
+            </li>
+          <% end %>
         <% else %>
           <li><%= link_to t("navbar.sign_up"), signup_path %></li>
           <li><%= link_to t("navbar.log_in"), login_path %></li>
