--- a/app/assets/stylesheets/question.css
+++ b/app/assets/stylesheets/question.css
@@ -5,6 +5,7 @@
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   font-family: Arial, sans-serif;
   margin: 2rem auto;
+  margin-top: 50px;
   max-width: 800px;
   padding: 1.5rem;
 }
