--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to t("navbar.home"), "#" %></li>
-        <li><%= link_to t("navbar.courses"), "#" %></li>
+        <li><%= link_to t("navbar.courses"), user_courses_path %></li>
         <% if is_user? %>
           <li><%= link_to t("navbar.words"), "#" %></li>
           <li><%= link_to t("navbar.profile"), "#" %></li>
