Study: Word lists

--- a/app/assets/stylesheets/_lessons.scss
+++ b/app/assets/stylesheets/_lessons.scss
@@ -10,12 +10,12 @@
 }
 
 .btn-primary {
-  background-color: #17a2b8;
+  background-color: rgb(64, 122, 177);
   color: white;
 }
 
 .btn-primary:hover {
-  background-color: #138496;
+  background-color: rgb(35, 95, 150);
   color: white;
   text-decoration: none;
 }
@@ -129,7 +129,7 @@
 }
 
 .test-history-link {
-  color: #17a2b8;
+  color: rgb(64, 122, 177);
   font-size: 14px;
   text-decoration: none;
 }
