--- a/app/views/user/lessons/show.html.erb
+++ b/app/views/user/lessons/show.html.erb
@@ -15,8 +15,11 @@
       <div class="lesson-actions">
         <%= link_to t(".actions.study"), study_user_course_lesson_path(@course, @lesson),
             class: "btn btn-primary study-btn" %>
-        <%= link_to t(".actions.test"), "#", 
-            class: "btn btn-primary test-btn" %>
+        <% if @attempt_left > 0 %>
+          <%= button_to t(".actions.test"), user_lesson_user_tests_path(@lesson.id),
+              method: :post,
+              class: "btn btn-primary test-btn" %>
+        <% end %>
       </div>
     </div>
     <div class="lesson-status">
