See test result details

--- a/app/views/user/lessons/test_history.html.erb
+++ b/app/views/user/lessons/test_history.html.erb
@@ -63,7 +63,7 @@
 
               <!-- Right: See Details button -->
               <div class="col-md-3 text-right">
-                <%= link_to t(".see_details"), "#", class: "btn btn-link btn-lg see-details-btn" %>
+                <%= link_to t(".see_details"), user_course_lesson_test_result_path(@course, @lesson, test_result), class: "btn btn-link btn-lg see-details-btn" %>
               </div>
             </div>
           </div>
