--- a/app/views/user/lessons/show.html.erb
+++ b/app/views/user/lessons/show.html.erb
@@ -15,7 +15,7 @@
       <div class="lesson-actions">
         <%= link_to t(".actions.study"), study_user_course_lesson_path(@course, @lesson),
             class: "btn btn-primary study-btn" %>
-        <%= link_to t(".actions.test"), test_user_course_lesson_path(@course, @lesson),
+        <%= link_to t(".actions.test"), "#", 
             class: "btn btn-primary test-btn" %>
       </div>
     </div>
