See test history

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,8 +12,8 @@
             <li><%= link_to t("navbar.manage_user"), "#" %></li>
           <% else %>
             <!-- Normal User Navigation -->
-            <li><%= link_to t("navbar.home"), "#" %></li>
-            <li><%= link_to t("navbar.courses"), "#" %></li>
+            <li><%= link_to t("navbar.home"), root_path %></li>
+            <li><%= link_to t("navbar.courses"), user_courses_path %></li>
             <li><%= link_to t("navbar.words"), user_words_path %></li>
             <li><%= link_to t("navbar.profile"), "#" %></li>
           <% end %>
