--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,7 +14,7 @@
             <!-- Normal User Navigation -->
             <li><%= link_to t("navbar.home"), "#" %></li>
             <li><%= link_to t("navbar.courses"), "#" %></li>
-            <li><%= link_to t("navbar.words"), "#" %></li>
+            <li><%= link_to t("navbar.words"), user_words_path %></li>
             <li><%= link_to t("navbar.profile"), "#" %></li>
           <% end %>
 
