--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,8 +24,8 @@
               <%= t("navbar.account") %> <b class="caret"></b>
             <% end %>
             <ul class="dropdown-menu" id="dropdown-menu">
-              <li><%= link_to t("navbar.profile"), "#" %></li>
-              <li><%= link_to t("navbar.settings"), "#" %></li>
+              <li><%= link_to t("navbar.profile"), user_path(current_user) %></li>
+              <li><%= link_to t("navbar.settings"), edit_user_path(current_user) %></li>
               <li class="divider"></li>
               <li><%= link_to t("navbar.log_out"), logout_path, data: {"turbo-method": :delete} %></li>
             </ul>
