--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,8 +1,7 @@
 <% if object.errors.any? %>
   <div id="error_explanation">
     <div class="alert alert-danger">
-      <%= t "error_messages.the_form_contains" %>
-      <%= pluralize object.errors.count, t("error_messages.error.one") %>.
+      <%= t("errors.template.header", count: object.errors.count) %>
     </div>
     <ul>
       <% object.errors.full_messages.each do |msg| %>
