--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,13 +1,8 @@
 <% provide :title, @user.name %>
-<div class="row">
-  <aside class="col-md-4">
-    <section class="user_info">
-      <h1>
-        <%= gravatar_for @user %>
-        <%= @user.name %>
-        <p><strong><%= t(".created_at") %>:</strong> <%= l(@user.created_at, format: :long) %></p>
-        <p><strong><%= t(".updated_at") %>:</strong> <%= l(@user.updated_at, format: :long) %></p>
-      </h1>
-    </section>
-  </aside>
- </div>
+
+<%= render "user_info", user: @user %>
+
+<%= render "user_courses",
+           user: @user,
+           user_courses: @user_courses,
+           pagy: @pagy %>
