--- a/app/assets/stylesheets/_words.scss
+++ b/app/assets/stylesheets/_words.scss
@@ -139,8 +139,13 @@
 
 .word-study-container {
   margin: 0 auto;
+  margin-top: 50px;
   max-width: 1200px;
   padding: 20px;
+}
+
+.words-container {
+  margin-top: 50px;
 }
 
 .word-type {
