--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,9 @@
 <% provide :title, t(".title") %>
+<% content_for :breadcrumbs do %>
+  <%= link_to content_tag(:i, "", class: "fas fa-home"), root_path %>
+  <span class="breadcrumb-separator"> > </span>
+  <%= link_to t(".title"), signup_path %>
+<% end %>
 <% provide :button_text, t(".create_my_account") %>
 <h1><%= t(".title") %></h1>
 <div class="row">
