--- a/app/views/user/lessons/show.html.erb
+++ b/app/views/user/lessons/show.html.erb
@@ -1,12 +1,21 @@
+<% content_for :breadcrumbs do %>
+  <%= link_to content_tag(:i, "", class: "fas fa-home"), root_path %>
+  <span class="breadcrumb-separator"> > </span>
+  <%= link_to t("user.courses.index.title"), user_courses_path %>
+  <span class="breadcrumb-separator"> > </span>
+  <%= link_to @course.title, user_course_path(@course) %>
+  <span class="breadcrumb-separator"> > </span>
+  <%= link_to @lesson.title, user_course_lesson_path(@course, @lesson) %>
+<% end %>
 <div class="lesson-details-container">
   <!-- Lesson Header Section -->
   <div class="lesson-header">
     <div class="lesson-info">
       <h1 class="lesson-title"><%= t(".lesson", number: @lesson.position, title: @lesson.title) %></h1>
       <div class="lesson-actions">
-        <%= link_to t(".actions.study"), study_user_course_lesson_path(@course, @lesson), 
+        <%= link_to t(".actions.study"), study_user_course_lesson_path(@course, @lesson),
             class: "btn btn-primary study-btn" %>
-        <%= link_to t(".actions.test"), test_user_course_lesson_path(@course, @lesson), 
+        <%= link_to t(".actions.test"), test_user_course_lesson_path(@course, @lesson),
             class: "btn btn-primary test-btn" %>
       </div>
     </div>
@@ -17,7 +26,7 @@
         <span class="status-pending"><%= t(".status.incomplete") %></span>
       <% end %>
       <% if @number_of_attempts.positive? %>
-        <%= link_to t(".actions.test_history"), test_history_user_course_lesson_path(@course, @lesson), 
+        <%= link_to t(".actions.test_history"), test_history_user_course_lesson_path(@course, @lesson),
             class: "test-history-link" %>
       <% end %>
     </div>
