--- a/app/views/user/words/index.html.erb
+++ b/app/views/user/words/index.html.erb
@@ -1,6 +1,11 @@
 <% provide :title, t(".title") %>
+<% content_for :breadcrumbs do %>
+  <%= link_to content_tag(:i, "", class: "fas fa-home"), root_path %>
+  <span class="breadcrumb-separator"> > </span>
+  <%= link_to t("user.words.index.title"), user_words_path %>
+<% end %>
 <div class="container-fluid">
-  <div class="row">
+  <div class="row words-container">
     <div class="col-md-3 col-sm-12 filter-sidebar">
       <%= render "filter" %>
     </div>
